--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,20 @@
 {
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "printWidth": 100,
+  "tabWidth": 4,
+  "plugins": ["prettier-plugin-sql"],
+  "overrides": [
+    {
+      "files": "*.ts",
+      "options": {
+        "parser": "typescript",
+        "embeddedLanguageFormatting": "auto"
+      }
+    }
+  ],
+  "language": "postgresql",
+  "keywordCase": "upper",
+  "database": "postgresql"
 }
