--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "globals": "^16.5.0",
     "nodemon": "^3.1.11",
     "prettier": "^3.7.4",
+    "prettier-plugin-sql": "^0.19.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
