--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
     "pg-pool": "^3.10.1"
   },
@@ -33,6 +34,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
